<resources>
    <string name="app_name">CatalogoAPP</string>
    <string name="export_string">export</string>
    <string name="home_string">Home</string>
    <string name="add_food">Product</string>
    <string name="add_category">Category</string>
    <string name="add_product_button">Add product</string>
    <string name="edit_product_button">Edit product</string>
    <string name="product_name_hint">product name</string>
    <string name="product_price_hint">price</string>
    <string name="add_category_button">Add category</string>
    <string name="edit_category_button">Edit category</string>
    <string name="category_name_hint">Category name</string>

    <string-array name="spinner_group_options">
        <item>Unit</item>
        <item>Kg</item>
    </string-array>

    <!-- DON'T modify the items order -->
    <!-- If you need to add MORE COLORS,
        check the string-array "spinner_color_values"
        AND check the colors.xml on "category colors" annotation-->
    <string-array name="spinner_colors">
        <item>pink</item> <!-- eb0cbd  ou e50074 -->
        <item>orange</item> <!-- ffa200 ou f97a00 -->
        <item>light blue</item> <!-- 1eaef5 -->
        <item>dark blue</item> <!-- 2965d4 -->
        <item>light purple</item> <!-- ae67ff -->
        <item>purple</item> <!-- 9840fb -->
        <item>dark purple</item> <!-- 7528cb -->
        <item>dark orange</item> <!-- c9a160 -->
    </string-array>

    <string-array name="spinner_colors_values" translatable="false">
        <item>category_pink</item> <!-- eb0cbd  ou e50074 -->
        <item>category_orange</item> <!-- ffa200 ou f97a00 -->
        <item>category_light_blue</item> <!-- 1eaef5 -->
        <item>category_dark_blue</item> <!-- 2965d4 -->
        <item>category_light_purple</item> <!-- ae67ff -->
        <item>category_purple</item> <!-- 9840fb -->
        <item>category_dark_purple</item> <!-- 7528cb -->
        <item>category_dark_orange</item> <!-- c9a160 -->
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_export">Export</string>
    <string name="title_category">Categories</string>
    <string name="title_add_category">Add category</string>
    <string name="title_add_product">Add product</string>
    <string name="title_update_cetegory">Update category</string>
    <string name="title_update_product">Update product</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="successfully_added_transaction">Successful transaction</string>
    <string name="back_button">back</string>
    <string name="categories_text">categories</string>
    <string name="options_text">options</string>
    <string name="failed_transaction">Transaction failed</string>
    <string name="delete_product_dialog">Delete product</string>
    <string name="edit_product_dialog">Edit product</string>

    <string name="sure_button_text">sure</string>
    <string name="categories_string">Categories</string>

    <string name="no_description_transaction" />
    <string name="delete_confirmation_title">delete confirmation</string>
    <string name="delete_confirmation_text">Are you sure you want delete:</string>

    <string name="error_category_constraint_transaction">There\'s some product with this category</string>
    <string name="error_options_empty">Options field is empty</string>
    <string name="error_add_category_before_add_product">Please add a category before add a product</string>
    <string name="error_category_empty">Category field is empty</string>
    <string name="error_product_name_empty">Product name is empty</string>
    <string name="error_product_price_empty">Product price is empty</string>

    <string name="price_product_per_unit">R$ %1$s / %2$s</string>
    <string name="label_close">Close</string>
    <string name="label_successfully_exported">successfully exported</string>
    <string name="label_already_exported">Sorry, but you already exported it</string>
    <string name="label_unique_price">Unique price</string>
    <string name="label_add_taste">add taste</string>
    <string name="hint_price_x">price </string>
    <string name="hint_taste_x">taste </string>
</resources>